--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "angular2-scroll-glue",
+  "name": "angular2-scrollglue-demo",
   "version": "1.0.0",
   "description": "Angular2 attribute directive for keeping a scrollable div scrolled to a particular position",
   "main": "webpack.config.js",
   "dependencies": {
     "angular2": "2.0.0-beta.9",
+    "angular2-scroll-glue": "1.0.0",
     "es6-promise": "3.1.2",
     "es6-shim": "0.33.13",
+    "path": "0.12.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "ts-loader": "0.8.1",
