--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
   "files": [
     "app/bootstrap.ts"
