--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular2-scrollglue-demo",
+  "name": "angular2-scroll-glue",
   "version": "1.0.0",
   "description": "Angular2 attribute directive for keeping a scrollable div scrolled to a particular position",
   "main": "webpack.config.js",
@@ -19,7 +19,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --devtool eval --config webpack.config.js  --progress --colors --host 0.0.0.0 --port 5000 --display-error-details"
+    "build": "tsc ./examples/app/ScrollGlue.ts --outDir ./src --experimentalDecorators",
+    "dev": "webpack-dev-server --devtool eval --config examples/webpack.config.js  --progress --colors --host 0.0.0.0 --port 5000 --display-error-details"
   },
   "author": "Dylan Harness <dharness@uwo.ca>",
   "license": "ISC"
