--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-scroll-glue",
   "version": "1.0.6",
   "description": "Angular2 attribute directive for keeping a scrollable div scrolled to a particular position",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "url": "https://github.com/dharness/angular2-scroll-glue",
   "dependencies": {
     "angular2": "2.0.0-beta.9",
